[package]
name = "tlt-stops"
version = "0.1.0"
edition = "2024"
authors = ["MiX <13241662+iNViTiON@users.noreply.github.com>"]

[package.metadata.release]
release = false

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'axum'] }
worker-macros = { version = "0.6", features = ['http'] }
tower-service = "0.3.3"
console_error_panic_hook = { version = "0.1.7" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.47.1", default-features = false, features = ["rt", "time"] }
js-sys = "0.3.80"
memchr = "2.7.5"
futures = "0.3.31"
wasm-streams = "0.4.2"
